Adicionando configurações no Swagger
